[package]

name = "solicit"
version = "0.4.1"
authors = ["Marko Lalic <marko.lalic@gmail.com>"]

description = "A library implementation of HTTP/2"
repository = "https://github.com/mlalic/solicit"
homepage = "https://github.com/mlalic/solicit"
readme = "README.md"
license = "MIT"
keywords = ["http2", "protocol", "solicit"]
documentation = "https://mlalic.github.io/solicit/solicit/index.html"

[dependencies]
hpack = "*"
log = "^0.3"

[dependencies.openssl]
version = "*"
features = ["tlsv1_2", "npn"]
optional = true

[features]
live_tests = []
tls = ["openssl", "openssl/tlsv1_2", "openssl/npn"]
